# spectral-primes

./: .gitignore  CHANGELOG.md  ERRATA.md  LICENSE  MANUSCRIPT.ru.md  README.md  README.ru.md  pyproject.toml  spectral_primes.docx  spectral_primes_v1_original.docx
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/src/: spectral_u.cpp
data/: zeros.csv
experiments/: __init__.py
experiments/verification/: results.txt  verify.py
experiments/wild_theories/: README.md  __init__.py  block_bootstrap.py  demo.py  followup_checks.py  fourier.py  level2_spectral.py  plot_results.py  scaling.py  signals.py  ulam.py
experiments/wild_theories/output/: block_bootstrap_summary.txt  followup_summary.txt  level2_summary.txt  summary.txt
scripts/: build_manuscript.py  build_zeros_csv.py  init_db.py
sql/: schema.sql
src/spectral_primes/: __init__.py  cli.py  experiment.py  io_data.py  operator.py  primes.py  random_sieve.py  subset.py
tests/: test_operator.py  test_permutation_null.py  test_primes.py  test_random_sieve.py  test_subset.py  test_warnings.py
