[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-primes"
version = "0.1.0"
description = "Spectral operator U(x,Λ) from zeta zeros — computational companion to the spectral primes preprint"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "spectral-primes contributors" }]
dependencies = [
    "numpy>=1.24",
    "sympy>=1.12",
    "mpmath>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
analysis = ["scipy>=1.10"]

[project.scripts]
spectral-primes = "spectral_primes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
