cmake_minimum_required(VERSION 3.16)
project(spectral_primes_cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SPECTRAL_U_SRC src/spectral_u.cpp)

# vcpkg / some installs export this
find_package(mpfr CONFIG QUIET)
if(TARGET mpfr::mpfr)
  add_executable(spectral_u ${SPECTRAL_U_SRC})
  target_link_libraries(spectral_u PRIVATE mpfr::mpfr)
elseif(TARGET MPFR::MPFR)
  add_executable(spectral_u ${SPECTRAL_U_SRC})
  target_link_libraries(spectral_u PRIVATE MPFR::MPFR)
else()
  find_package(PkgConfig QUIET)
  if(PkgConfig_FOUND)
    pkg_check_modules(MPFR_PC mpfr)
  endif()
  if(MPFR_PC_FOUND)
    add_executable(spectral_u ${SPECTRAL_U_SRC})
    target_include_directories(spectral_u PRIVATE ${MPFR_PC_INCLUDE_DIRS})
    target_link_libraries(spectral_u PRIVATE ${MPFR_PC_LIBRARIES})
    target_compile_options(spectral_u PRIVATE ${MPFR_PC_CFLAGS_OTHER})
  else()
    find_path(MPFR_INCLUDE_DIR mpfr.h)
    find_library(MPFR_LIBRARY NAMES mpfr libmpfr)
    find_library(GMP_LIBRARY NAMES gmp libgmp)
    if(NOT MPFR_INCLUDE_DIR OR NOT MPFR_LIBRARY)
      message(FATAL_ERROR "MPFR not found. See cpp/README.md (Debian: libmpfr-dev, vcpkg: mpfr)")
    endif()
    add_executable(spectral_u ${SPECTRAL_U_SRC})
    target_include_directories(spectral_u PRIVATE ${MPFR_INCLUDE_DIR})
    target_link_libraries(spectral_u PRIVATE ${MPFR_LIBRARY})
    if(GMP_LIBRARY)
      target_link_libraries(spectral_u PRIVATE ${GMP_LIBRARY})
    endif()
  endif()
endif()
